Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39887

Regression bug: QWidget::setAttribute() does not set Qt::WA_X11NetWmWindowType in Qt 5.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.2
    • 5.3.1
    • None
    • Ubuntu Linux and ArchLinux, Qt 5.3, X11, LXQt desktop environment, openbox window manager.
    • 17d68c4fc371c32bd58d0a94ac63f0170edaf29e, 29b076d61 (dev), 7864c01c7 (6.6), 78f628971 (tqtc/lts-6.2), 2e8a0b096 (6.5), bedacaec1 (tqtc/lts-5.15)

      According to the API doc, passing Qt::WA_X11NetWmWindowTypes to QWidget::setAttribute() should set proper NETWM states when in X11. This used to work in Qt 4.8, but it has no effect in Qt5 when I'm using XCB backend.
      I checked the source code of Qt 5 and it seems that code related to this feature is actually removed.
      This feature need to be implemented in the xcb backend.

        For Gerrit Dashboard: QTBUG-39887
        # Subject Branch Project Status CR V

            avolkov Alexander Volkov
            pcman Hong Jen Yee
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: